RESOLVED FIXED272048
Thread safety warning: MediaFormatReader m_duration is unprotected by m_parseTracksLock
https://bugs.webkit.org/show_bug.cgi?id=272048
Summary Thread safety warning: MediaFormatReader m_duration is unprotected by m_parse...
Jer Noble
Reported 2024-04-02 12:29:55 PDT
Thread safety warning: MediaFormatReader m_duration is unprotected by m_parseTracksLock
Attachments
Jer Noble
Comment 1 2024-04-02 12:30:00 PDT
Alexey Proskuryakov
Comment 2 2024-04-03 13:39:06 PDT
EWS
Comment 3 2024-04-03 14:46:19 PDT
Committed 277035@main (fef30aefacf7): <https://commits.webkit.org/277035@main> Reviewed commits have been landed. Closing PR #26739 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.