Thread safety warning: MediaFormatReader m_duration is unprotected by m_parseTracksLock rdar://124551630 https://bugs.webkit.org/show_bug.cgi?id=272048

Reviewed by Eric Carlson.

In addition to holding the lock when accessing m_duration, we should also not be handing
a reference to an internal variable that can be modified off the calling thread.

* Source/WebKit/Shared/mac/MediaFormatReader/MediaFormatReader.cpp:
(WebKit::MediaFormatReader::duration const):
* Source/WebKit/Shared/mac/MediaFormatReader/MediaFormatReader.h:

Canonical link: https://commits.webkit.org/277035@main